notes/figures: updated intro, added preorders

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/style.css" />
 	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds" />
 	<script type="text/javascript" src="/static/script.js"></script>
-	<title>My Collection of Assorted Figurines | sentimental µsounds</title>
+	<title>My Collection of Assorted Figurines (oops all miku!) | sentimental µsounds</title>
 </head>
 <body>
 <audio hidden="hidden" id="bgm"></audio>
@@ -36,16 +36,16 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/7/5 -->
-<h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌑 Wed, Jul 5th, 2023</p>
-<p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things.
-Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
-Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
-<p>Since I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them, this page that piggybacks off their API will do for now. Links will take you to their catalog entry on <em>mfc</em><sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>.</p>
+<!-- updated 2023/7/8 -->
+<h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
+<p>Last updated 🌒 Sat, Jul 8th, 2023</p>
+<p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
+Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>, these are more modest and less ambitious in detail, size, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more expensive figures in one or more of these categories.</p>
+<p>I live an ocean away from the eastern archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> still dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild. Recently, the <a href="https://www.google.com/finance/quote/USD-JPY?window=5Y">historically weak yen</a> has me importing<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup> far more often than I used to.</p>
+<p>I don’t feel like making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to keep track of my collection, so this page piggybacks off their API, links will take you to their catalog entry on <em>mfc</em><sup class="footnote-ref"><a href="#fn2" id="fnref2">2</a></sup>.</p>
 <h2>Collection<span id="Collection"></span></h2>
-<p><em>Sorted by when I remember getting it, from newest to oldest.
-<br />Abstract entries like figures that have yet to ship or release are at the beginning, stuff I’ll find someday is at the very end.</em></p>
+<p><em>Sorted by when I remember getting it, from newest to oldest.</em>
+<br /><em>Abstract entries like figures that have yet to ship or release are in dotted yellow, Mikus I’ll find someday are at the very end.</em></p>
 <div id="fig-thumbs">
 <noscript>
 <blockquote>
@@ -105,7 +105,7 @@ I remember when <em>“replica”</em> nendoroids were a fringe hobby good releg
 <li>faces that just look “off”, screenprinted eyes that have a <a href="https://myfigurecollection.net/picture/2182516">bizarre skew</a></li>
 <li>individual parts that won’t fit together correctly or won’t stay snug</li>
 <li>designs standing on one leg that cannot hold their own weight and bend at a steep angle</li>
-<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn2" id="fnref2">2</a></sup></li>
+<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn3" id="fnref3">3</a></sup></li>
 <li>paint fading quickly even in interior lights from store displays</li>
 <li>visible molding seams <em>(flash)</em>, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
 <li><a href="https://myfigurecollection.net/picture/2529349">sloppy paint, gloppy paint</a> and paint overspray, a complete disregard for quality</li>
@@ -141,9 +141,13 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ 'p546853', 'be182', 'bandai figure-rise bust miku model kit' ],
+	[ 'p1875244', '2f1ce', 'furyu noodle stopper miku autumn date' ],
+	[ 'p1840070', 'c98a3', 'good smile needy girl overdose kangel nendoroid #2201' ],
+
 	[ '289034', '83d4b', 'sega infinity module miku SPM' ],
 	[ '1370076', '897d0', 'furyu bicute bunnies miku street ver.' ],
-	[ '1006896', '2847c', 'furyu bicute bunnies miku white bunny ver.' ],
+	[ '1210391', 'ebe3e', 'furyu bicute bunnies miku white bunny pearl ver.' ],
 	[ '1419501', '06f2e', 'good smile racing miku 2022 nendoroid #1839' ],
 	[ '1503807', '58c20', 'good smile magical mirai 2021 miku nendoroid #1940' ],
 	[ '1407723', 'd9878', 'taito big nuigurumi miku winter ver. (type B)' ],
@@ -162,7 +166,7 @@ var figs = [
 	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper' ],
 	[ 'p945860', '328b2', 'good smile miku nendoroid doll' ],
 	[ '1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll' ],
-	[ '1616455', '1154b', 'good smile pop up parade miku DECO*27 the vampire ver. L' ],
+	[ '1616455', '1154b', 'good smile pop up parade DECO*27 vampire miku ver. L' ],
 	[ 'p1779734', 'e4220', 'taito miku fashion figure subculture ver.' ],
 
 	[ '1335582', '0d57a', 'sega sakura miku v3 SPM' ],
@@ -194,6 +198,7 @@ var figs = [
 	[ 'x514129', '00fa6', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
 	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure' ],
 	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014' ],
+
 	[ '401018', 'bfb66', 'sega project diva innocent SPM miku' ],
 	[ '718192', '29017', 'hatsune miku 2nd season Winter ver.' ],
 	[ '1251026', 'e36e0', 'bandai q posket miku type a' ],
@@ -291,11 +296,17 @@ for (var i in figs) {
 <section class="footnotes">
 <ol>
 <li id="fn1">
-<p>Note: mfc likes to <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">change their API endpoints</a> a lot, if images are broken, it’s not for <a href="https://raw.githubusercontent.com/microsounds/microsounds.github.io/master/.scripts/fetch-figure-pics.sh">a lack of trying</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<p>For people in the U.S., you can put a decimal point to the left of the 2nd least significant digit in <strong>JPY</strong> prices and you should have an approximation of the cost in <strong>USD</strong> after international shipping,
+<em>for example ¥2,800 becomes $28.00</em>.</p>
+<p>This assumes you are shipping multiple items in one order, preferably more than 3 in the case of low value items such as prize figures.
+Most timely shipping options from Japan start at ¥4,000, single item shipments are rarely cost effective unless they exceed ¥16,000. <a href="#fnref1" class="footnote-backref">↩</a></p>
 </li>
 <li id="fn2">
+<p>Note: mfc likes to <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">change their API endpoints</a> a lot, if images are broken, it’s not for <a href="https://raw.githubusercontent.com/microsounds/microsounds.github.io/master/.scripts/fetch-figure-pics.sh">a lack of trying</a>. <a href="#fnref2" class="footnote-backref">↩</a></p>
+</li>
+<li id="fn3">
 <p>A wild new frontier in bootlegs, this is a combination of
-<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref2" class="footnote-backref">↩</a></p>
+<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref3" class="footnote-backref">↩</a></p>
 </li>
 </ol>
 </section>
