--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/7/22 -->
+<!-- updated 2023/7/24 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌖 Sat, Jul 22nd, 2023</p>
+<p>Last updated 🌗 Mon, Jul 24th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -256,6 +256,8 @@ var figs = [
 	/* wishlist */
 	[ 'w861021', 'c00c8', 'sega miku preciality special nuigurumi plush' ],
 	[ 'w370088', '27dfa', 'sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
+	[ 'w945858', 'b91b5', 'good smile hatsune miku v4x nendoroid #1309' ],
+	[ 'w1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ 'w287701', 'ad644', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
 	[ 'w78591', '17fbf', 'max factory miku 1/7 scale HSP ver. (2012)' ],
 	[ 'w66010', 'e028f', 'good smile miku support ver. nendoroid #170' ],
