notes/figures: Added good smile miku nt 1/8 scale

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,13 +36,13 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/7/24 -->
+<!-- updated 2023/7/27 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌗 Mon, Jul 24th, 2023</p>
+<p>Last updated 🌘 Thu, Jul 27th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
-All the while, a <a href="https://www.google.com/finance/quote/USD-JPY?window=5Y">historically weak yen</a> has me importing<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup> far more often than I used to.</p>
+All the while, a <a href="https://www.google.com/finance/quote/USD-JPY?window=5Y">historically cheap yen</a> has me importing<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup> far more often than I used to.</p>
 <p>I don’t feel like making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to keep track of my collection, so this page piggybacks off their API, links will take you to their catalog entry on <em>mfc</em><sup class="footnote-ref"><a href="#fn2" id="fnref2">2</a></sup>.</p>
 <h2>Collection<span id="Collection"></span></h2>
 <p><em><strong><span id="fig-count" style="font-size: 150%"></span></strong> entries,
@@ -118,7 +118,7 @@ Amazon makes it easier to spot fakes, they will all have incomprehensible word s
 <li>visible seams and outright separation of parts between thigh-highs, bare skin, shoes, detached sleeves, etc.</li>
 <li><a href="https://myfigurecollection.net/picture/2529349">sloppy paint, gloppy paint</a> and paint overspray, a complete disregard for quality</li>
 </ul>
-<p>Quality can vary wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, with few exceptions.
+<p>Quality can vary wildly with knockoffs, they consistently teeter the line between <strong>garbage</strong> and <strong>barely acceptable</strong> <em>(from one viewing angle)</em>, with few exceptions. Even if everything else is acceptable, the face will always give it away.
 The best possible case is coming across <em>“quality control rejects”</em> from the genuine production run, but in general, they have no residual resale or collectible value if you care about that sort of thing.
 That being said, I won’t advise against buying them willingly and deliberately for fun and curiosity.</p>
 <h2>Bonus Gallery<span id="Bonus-Gallery"></span></h2>
@@ -149,6 +149,7 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ 'p1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ 'p1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale' ],
 	[ 'p926772', '68615', 'good smile racing miku 2020 nendoroid #1293' ],
 	[ 'p1711391', '32d0d', 'taito kuji miku 39 no hi kinen kuji B prize' ],
@@ -257,7 +258,6 @@ var figs = [
 	[ 'w861021', 'c00c8', 'sega miku preciality special nuigurumi plush' ],
 	[ 'w370088', '27dfa', 'sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
 	[ 'w945858', 'b91b5', 'good smile hatsune miku v4x nendoroid #1309' ],
-	[ 'w1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ 'w287701', 'ad644', 'good smile mitchie m the greatest idol miku 1/8 scale (2016)' ],
 	[ 'w78591', '17fbf', 'max factory miku 1/7 scale HSP ver. (2012)' ],
 	[ 'w66010', 'e028f', 'good smile miku support ver. nendoroid #170' ],
@@ -326,9 +326,10 @@ for (var i in figs) {
 <li id="fn1">
 <p>For people in the U.S., you can put a decimal point to the left of the 2nd least significant digit in <strong>JPY</strong> prices and you should have an approximation of the cost in <strong>USD</strong> after international shipping,
 <em>for example ¥2,800 becomes $28.00</em>.</p>
-<p>This assumes you are shipping multiple items in one order, preferably more than 3 in the case of low value items such as prize figures.
+<p>This gives you insight into the markup percentage that domestic hobby good shops tend to have over Japanese ones.</p>
+<p>This also assumes you are shipping multiple items in one order, preferably more than 3 in the case of low value items such as prize figures.
 Most, if not all air shipping options from Japan start at ¥4,000, single item shipments are rarely cost effective unless they exceed ¥16,000.</p>
-<p>Consider surface shipping <em>(a.k.a ocean freight)</em> if you care to save several hundred dollars on shipping costs for <a href="https://www.google.com/search?q=amiami+shipping+%28200%7Ccoffin%29+box+site%3Areddit.com&amp;tbm=isch">very voluminous shipments</a> and add 1-4 months to your shipping speed. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<p>Consider surface shipping <em>(a.k.a ocean freight)</em> if you care to save several hundred dollars on shipping costs for <a href="https://www.google.com/search?q=amiami+shipping+%28200%7Ccoffin%29+box+site%3Areddit.com&amp;tbm=isch">very voluminous shipments</a>, but note that it does add 1-4 months to your shipping speed, don’t forget the insurance. <a href="#fnref1" class="footnote-backref">↩</a></p>
 </li>
 <li id="fn2">
 <p>Note: mfc likes to <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">change their API endpoints</a> a lot, if images are broken, it’s not for <a href="https://raw.githubusercontent.com/microsounds/microsounds.github.io/master/.scripts/fetch-figure-pics.sh">a lack of trying</a>. <a href="#fnref2" class="footnote-backref">↩</a></p>
