notes/figures: suruga-ya.com (not .jp) order got canceled cus they suck
(is this a stupid blogpost? probably, i don't feel like putting it on the main
site tho)

so basically i ordered 2 scale figures and 10 nendoroids with free shipping
during a free int'l shipping promotion, the DHL shipping alone would have
probably cost them ¥70,000 alone, just slightly more than my order total, and
obviously they refused to honor it and they ended the promotion early (meant to
run until aug 10th) so nobody would have a chance to reorder in time, also they
increased prices of everything on their site 10-25% to screw with us dirty
gaijins, just use the japanese domestic site (.jp) and a forwarding service,
suruga-ya.com sucks hard and you have zero reason to use it, they have a tiny
fraction of the .jp site's merchandise anyway.

they were running a free shipping sale for international customers at the time
(july 27-aug 2, 2023) and were hemhoraging money shipping international DHL and
looking for any excuse to cancel large orders, including dumb things like CC
billing address not matching shipping address or large orders over ¥7,000 being
made on a new account with no prior order history being "autocanceled" by their
fraud protection, incompetent fucks literally tied up their own inventory
(marked as sold out) for 2 weeks and probably even boxed it up too before they
decided to actually attempt billing and subsequently cancel my order

in any case, this is literally never happening again and was very likely a
mistake on their end that they even canceled the sale early, they were sending
the same size boxes they use for domestic japanese orders and it doesn't matter
usually because japan post charges by weight and not package volume, not so in
international air parcels! These cost a shit-ton to ship DHL or EMS to the
U.S., imagine blowing ¥44,500 to ship a 40x30x18cm, 1kg box containing ¥1,100
in goods. Why don't they offer surface mail, I don't mind the 3-4mo wait really.

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/7/28 -->
+<!-- updated 2023/8/10 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌘 Fri, Jul 28th, 2023</p>
+<p>Last updated 🌓 Thu, Aug 10th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,7 +149,7 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
-	[ 'p78591', '17fbf', 'max factory miku 1/7 scale HSP ver. (2012)' ],
+/*	[ 'p78591', '17fbf', 'max factory miku 1/7 scale HSP ver. (2012)' ],
 	[ 'p104300', '65180', 'good smile sakura miku nendoroid #274' ],
 	[ 'p41459', '30b7f', 'good smile miku absolute HMO edition nendoroid #129' ],
 	[ 'p153162', '8abda', 'good smile snow miku 2014 nendoroid #380' ],
@@ -161,6 +161,7 @@ var figs = [
 	[ 'p66010', 'e028f', 'good smile miku support ver. nendoroid #170' ],
 	[ 'p59755', '4a5b2', 'max factory miku append figma #100' ],
 	[ 'p78582', '5dc32', 'good smike miku append nendoroid #194' ],
+*/
 
 	[ 'p1189085', '8fa69', 'good smile hatsune miku nt 1/8 scale (2023)' ],
 	[ 'p1258843', '55d3c', 'furyu f:nex hatsune miku chronicle 1/7 scale' ],
