--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/4/30 -->
+<!-- updated 2023/8/14 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -159,6 +159,11 @@
 </ul>
 <p><strong>misc</strong> —</p>
 <ul>
+<li><a href="https://twofactor.date">twofactor.date</a>
+<ul>
+<li><em>Generate TOTP codes from 2FA keys in QR or <code>otpauth://</code> format in your web browser without any authenticator phone app.</em></li>
+</ul>
+</li>
 <li><a href="https://diskprices.com">disk prices</a>
 <ul>
 <li><em>Automatically curated list of new/used disk storage prices on Amazon.com for various countries.</em></li>
@@ -231,7 +236,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌘 Sun, Apr 30th, 2023</p>
+Updated 🌕 Mon, Aug 14th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
